[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/people/hair_0.png" type="Texture" id=1]
[ext_resource path="res://assets/people/ears_0.png" type="Texture" id=2]
[ext_resource path="res://assets/people/head_0.png" type="Texture" id=3]
[ext_resource path="res://assets/people/body_0.png" type="Texture" id=4]
[ext_resource path="res://scenes/Customer.gd" type="Script" id=5]
[ext_resource path="res://assets/people/eyes_0.png" type="Texture" id=6]
[ext_resource path="res://scenes/Bin.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/people/glasses.png" type="Texture" id=8]
[ext_resource path="res://assets/font/SimpleFont.fnt" type="BitmapFont" id=9]
[ext_resource path="res://assets/speech_bubble.png" type="Texture" id=10]

[node name="Customer" type="Node2D"]
scale = Vector2( 3, 3 )
script = ExtResource( 5 )

[node name="Bin" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( -1.00974e-28, -28 )
scale = Vector2( 1.5, 1.5 )
type = 3

[node name="HeadSprite" type="Sprite" parent="."]
position = Vector2( -1, -15 )
texture = ExtResource( 3 )

[node name="HairSprite" type="Sprite" parent="HeadSprite"]
position = Vector2( 1, -10 )
texture = ExtResource( 1 )

[node name="EyesSprite" type="Sprite" parent="HeadSprite"]
texture = ExtResource( 6 )

[node name="GlassesSprite" type="Sprite" parent="HeadSprite"]
position = Vector2( 2, -2.5 )
texture = ExtResource( 8 )

[node name="EarsSprite" type="Sprite" parent="HeadSprite"]
position = Vector2( 0, -5.5 )
texture = ExtResource( 2 )

[node name="HeadTween" type="Tween" parent="HeadSprite"]

[node name="BodySprite" type="Sprite" parent="."]
position = Vector2( 3.5, 10.5 )
texture = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="SpeechBubble" type="Node2D" parent="."]
position = Vector2( -137, -52 )

[node name="speech_bubble" type="Sprite" parent="SpeechBubble"]
position = Vector2( 51, 17.3333 )
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="SpeechBubble"]
margin_left = 3.0
margin_top = 3.0
margin_right = 145.0
margin_bottom = 45.0
rect_scale = Vector2( 0.66, 0.66 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You shouldn't be able to read this at all."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeechTween" type="Tween" parent="SpeechBubble"]
